refatoracao header fixed e desativar scrollbar, mantendo a rolagem

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -7,7 +7,7 @@
   background-color: #ccc;
 }
 
-header {
+.headerMain {
   position: fixed!important;
   z-index: 1000;
 }
